--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "import pandas as pd\n",
+    "import"
    ]
   },
   {
