Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,8 @@
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "import statsmodels.api as s"
+    "from patsy import d\n",
+    "import statsmodels.api as sm"
    ]
   },
   {
