Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "from patsy import d\n",
+    "from patsy import dmatrices\n",
     "import statsmodels.api as sm"
    ]
   },
