--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
     "import pandas as pd\n",
     "from patsy import dmatrices\n",
     "import statsmodels.api as sm\n",
-    "df = "
+    "df = pd.read_csv('titanic.')"
    ]
   },
   {
