--- a/index.ipynb
+++ b/index.ipynb
@@ -240,8 +240,9 @@
    "source": [
     "#Your code here\n",
     "#Step 2: Defining X and y\n",
-    "y, X = dmatrices('Target ~ Age  + C(Race) + C(Sex)',\n",
-    "                  salaries, return_type = \"dataframe\")"
+    "# y, X = dmatrices('Target ~ Age  + C(Race) + C(Sex)',\n",
+    "#                   salaries, return_type = \"dataframe\")\n",
+    "y, X = dmatri"
    ]
   },
   {
