--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
     "#Step 2: Defining X and y\n",
     "# y, X = dmatrices('Target ~ Age  + C(Race) + C(Sex)',\n",
     "#                   salaries, return_type = \"dataframe\")\n",
-    "y, X = dmatrices(Survived ~ CPclass + Age + C(Sex) + )"
+    "y, X = dmatrices(Survived ~ C(Pclass) + Age + C(Sex) + )"
    ]
   },
   {
