Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "logit_model = sm.Logit(y.iloc[:,1], X)\n",
+    "result = logit_model.fit()"
    ]
   },
   {
