Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,9 +234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-f6a94356dee4>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-f6a94356dee4>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    y, X = dmatrices(Survived ~ C(Pclass) + Age + C(Sex), df, return_type = 'dataframe')\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
     "#Step 2: Defining X and y\n",
@@ -284,7 +293,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "result.summary()"
    ]
   },
   {
