Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
     "#Step 2: Defining X and y\n",
     "# y, X = dmatrices('Target ~ Age  + C(Race) + C(Sex)',\n",
     "#                   salaries, return_type = \"dataframe\")\n",
-    "y, X = dmatrices('Survived ~ Pclass + Age + C(Sex) + ', df, return_type = 'dataframe')"
+    "y, X = dmatrices('Survived ~ Pclass + Age + C(Sex) + SibSp + Fare', df, return_type = 'dataframe')"
    ]
   },
   {
