--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "logit_model = sm.Logit(y.iloc[:,1], X)\n",
+    "logit_model = sm.Logit(y, X)\n",
     "result = logit_model.fit()"
    ]
   },
