Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -411,7 +411,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n"
+    "#your code here\n",
+    "y, X = dmatrices('Survived ~ Pclass + Age + C(Sex) + SibSp + Fare + C(Embarked)', df, return_type = 'dataframe')"
    ]
   },
   {
