Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -412,7 +412,7 @@
    "outputs": [],
    "source": [
     "#your code here\n",
-    "y, X = dmatrices('Survived ~ Pclass + Age + C(Sex) + SibSp + Fare + C(Embarked)', df, return_type = 'dataframe')"
+    "y, X = dmatrices('Survived ~ Pclass + Age + C(Sex) + SibSp + Fare', df, return_type = 'dataframe')"
    ]
   },
   {
