Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -412,7 +412,9 @@
    "outputs": [],
    "source": [
     "#your code here\n",
-    "a, B = dmatrices('Survived ~ Pclass + Age + C(Sex) + SibSp', df, return_type = 'dataframe')"
+    "a, B = dmatrices('Survived ~ Pclass + Age + C(Sex) + SibSp', df, return_type = 'dataframe')\n",
+    "logit_model = sm.Logit(a, B)\n",
+    "result = logit_model.fit()"
    ]
   },
   {
